fixed /oldest and /youngest, added two more stats pages

--- a/views/index.erb
+++ b/views/index.erb
@@ -17,4 +17,6 @@
     <a class='btn btn-primary' href="/all">All</a>    
     <a class='btn btn-primary' href="/oldest">Oldest</a>    
     <a class='btn btn-primary' href="/youngest">Youngest</a>    
+    <a class='btn btn-primary' href="/men">Male Athletes</a>    
+    <a class='btn btn-primary' href="/chinese_ladies">Female Chinese Athletes</a>    
   </div>
